Part2/PingPongApp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-namespace
  name: dwk-pingpongapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-pingpongapp
  template:
    metadata:
      labels:
        app: dwk-pingpongapp
    spec:
      volumes:
        - name: pingpongapp-volume
          emptyDir: {}
      containers:
        - name: dwk-pingpongapp
          image: roaringduck/dwk-pingpongapp
          volumeMounts:
          - name: pingpongapp-volume
            mountPath: /usr/src/app/files
