Part2/PingPongApp/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: log-namespace
  name: dwk-pingpongapp
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: dwk-pingpongapp-svc
            port:
              number: 10002
